# DocuGraph-Streamlit

./: README.md  app.py  cli.py  pyproject.toml  requirements.txt
agents/: specialists.py  team.py
parsers/: file_reader.py
prompts/: library.py
utils/: doc_generator.py  ollama_client.py  onnx_embedder.py
